syntax = "proto3";

package stats.service.analyzer;

option java_package = "ru.practicum.grpc.stats.analyzer";

import "stats/messages/event_recommendation.proto";

service RecommendationsController {
  rpc GetRecommendationsForUser (stats.message.recommendation.UserPredictionsRequestProto)
      returns (stream stats.message.recommendation.RecommendedEventProto);

  rpc GetSimilarEvents (stats.message.recommendation.SimilarEventsRequestProto)
      returns (stream stats.message.recommendation.RecommendedEventProto);

  rpc GetInteractionsCount (stats.message.recommendation.InteractionsCountRequestProto)
      returns (stream stats.message.recommendation.RecommendedEventProto);
}